<resources>
    <string name="app_name">Report Vehicle Complaints</string>
    <string name="vehicle_complaint_report">Laporan keluhan kendaraan</string>
    <string name="my_name">Imron Nanda Marpaung</string>
    <string name="create_new_complaint_report">Buat Laporan Keluhan Baru</string>
    <string name="complaint_report">Laporan Keluhan</string>
    <string name="complaint_record">Catatan Keluhan :</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="form_report_complaint">Form Laporan Keluhan</string>
    <string name="select_a_vehicle">Pilih Kendaraan</string>
    <string name="enter_reason_your_complaint">Masukkan Alasan Keluhan Anda</string>
    <string name="report_document">Dokumen Laporan</string>
    <string name="take_photo">Ambil Foto</string>
</resources>